# verified-lockfree

./: CLAUDE.md  Cargo.toml  README.md
crates/vf-core/src/: counterexample.rs  lib.rs  tla_spec.rs
crates/vf-core/src/invariants/: btree_plus.rs  cross_shard_ssi.rs  epoch_gc.rs  io_buffer.rs  linked_list.rs  mod.rs  pagecache.rs  radix_tree.rs  ring_buffer.rs  ssi.rs  stack.rs
crates/vf-dst/: Cargo.toml
crates/vf-dst/src/: fault_injection.rs  harness.rs  instrumented.rs  lib.rs  loom_oracle.rs  oracle_scheduler.rs  ssi_harness.rs  ssi_oracle.rs
crates/vf-evaluators/: Cargo.toml
crates/vf-evaluators/src/: adrs.rs  cascade.rs  level3_dst.rs  level4_stateright.rs  level5_kani.rs  level6_verus.rs  lib.rs  result.rs
crates/vf-examples/: Cargo.toml
crates/vf-examples/src/: buggy_stacks.rs  kani_proofs.rs  lib.rs  loom_stack.rs  ssi.rs  treiber_stack.rs
crates/vf-examples/tests/: ssi_dst_integration.rs
crates/vf-generator/: Cargo.toml
crates/vf-generator/src/: client.rs  generator.rs  lib.rs  prompt.rs
crates/vf-generator/src/templates/: dst_instrumented.rs  mod.rs
crates/vf-stateright/: Cargo.toml
crates/vf-stateright/src/: lib.rs  oracle.rs  ssi.rs  verifier.rs
crates/vf-stateright/tests/: oracle_integration.rs  ssi_oracle_integration.rs
docs/blog/: verified-evolution.md
docs/paper/: verified-evolution.tex
results/v1/: btree_plus_best.rs  btree_plus_history.json  btree_plus_info.json  cloud_scheduling_best.rs  cloud_scheduling_history.json  cloud_scheduling_info.json  cross_shard_ssi_best.rs  cross_shard_ssi_history.json  cross_shard_ssi_info.json  epoch_gc_best.rs  epoch_gc_history.json  epoch_gc_info.json  io_buffer_history.json  linked_list_best.rs  linked_list_history.json  linked_list_info.json  llm_sql_cache_best.rs  llm_sql_cache_history.json  llm_sql_cache_info.json  load_balancing_best.rs  load_balancing_history.json  load_balancing_info.json  pagecache_best.rs  pagecache_history.json  pagecache_info.json  radix_tree_best.rs  radix_tree_history.json  radix_tree_info.json  raft_consensus_best.rs  raft_consensus_history.json  raft_consensus_info.json  raft_election_best.rs  raft_election_history.json  raft_election_info.json  ring_buffer_best.rs  ring_buffer_history.json  ring_buffer_info.json  tcp_congestion_best.rs  tcp_congestion_history.json  tcp_congestion_info.json  (+9 more)
specs/adrs/: tcp_congestion.yaml
specs/distributed/: raft_consensus.tla  raft_election.tla  two_phase_commit.tla
specs/lockfree/: btree_plus.tla  epoch_gc.tla  io_buffer.tla  linked_list.tla  pagecache.tla  radix_tree.tla  ring_buffer.tla
specs/ssi/: cross_shard_ssi.tla
tools/vf-evolve/tasks/btree_plus/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/cloud_scheduling/: PROBLEM.md  constraint_spec.yaml  initial.py  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/cross_shard_ssi/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/epoch_gc/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/io_buffer/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/linked_list/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/llm_sql_cache/: PROBLEM.md  constraint_spec.yaml  initial.py  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/load_balancing/: PROBLEM.md  constraint_spec.yaml  initial.py  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/pagecache/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/radix_tree/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/raft_consensus/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/raft_election/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/ring_buffer/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/tcp_congestion/: PROBLEM.md  initial.py  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/treiber_stack/: PROBLEM.md  initial.rs  initial_atomic.rs  patterns.rs  trait_spec.rs
tools/vf-evolve/tasks/two_phase_commit/: PROBLEM.md  initial.rs  trait_spec.rs
tools/vf-evolve/tasks/txn_scheduling/: PROBLEM.md  constraint_spec.yaml  initial.py  initial.rs  trait_spec.rs
