[workspace]
resolver = "2"
members = [
    "crates/vf-core",
    "crates/vf-dst",
    "crates/vf-evaluators",
    "crates/vf-quality",
    "crates/vf-perf",
    "crates/vf-stateright",
    "crates/vf-examples",
    "crates/vf-generator",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Internal crates
vf-core = { path = "crates/vf-core" }
vf-dst = { path = "crates/vf-dst" }
vf-evaluators = { path = "crates/vf-evaluators" }
vf-quality = { path = "crates/vf-quality" }
vf-perf = { path = "crates/vf-perf" }
vf-stateright = { path = "crates/vf-stateright" }
vf-examples = { path = "crates/vf-examples" }
vf-generator = { path = "crates/vf-generator" }

# Concurrency primitives
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"

# Testing tools
loom = "0.7"

# Model checking
stateright = "0.30"

# Utilities
thiserror = "1.0"
rand = "0.8"
rand_xoshiro = "0.6"
num_cpus = "1.16"
tempfile = "3.10"

# Async (for evaluator orchestration only)
tokio = { version = "1.35", features = ["process", "time", "fs", "io-util"] }

# CLI
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client (for LLM API calls)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Code analysis
syn = { version = "2.0", features = ["full", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
debug = true  # Keep debug info for better error messages

[profile.test]
opt-level = 1  # Some optimization for faster test execution
