[package]
name = "vf-dst"
description = "Deterministic Simulation Testing framework for verified lock-free structures"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
rand.workspace = true
rand_xoshiro.workspace = true
thiserror.workspace = true
vf-core = { path = "../vf-core" }

[dev-dependencies]
