[package]
name = "vf-generator"
description = "LLM-powered code generation with spec-guided verification"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
vf-core.workspace = true
vf-evaluators.workspace = true
vf-perf.workspace = true

thiserror.workspace = true
tokio = { workspace = true, features = ["process", "time", "fs", "io-util", "rt-multi-thread", "macros"] }
serde.workspace = true
serde_json.workspace = true
rand.workspace = true

# HTTP client for Claude API
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

[dev-dependencies]

[[bin]]
name = "vf-generate"
path = "src/bin/generate.rs"
